cmake_minimum_required(VERSION 3.16)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode
        main.cpp
        leetcode-0003.h leetcode-0028.h leetcode-0034.h leetcode-0076.h leetcode-0092.h leetcode-0206.h
        leetcode-0438.h leetcode-0518.h leetcode-0560.h leetcode-0303.h leetcode-0304.h leetcode-1094.h
        leetcode-0567.h leetcode-0704.h leetcode-1109.h leetcode-0875.h leetcode-0226.h leetcode-0116.h
        leetcode-0114.h leetcode-0654.h leetcode-0105.h leetcode-0106.h leetcode-0889.h leetcode-0652.h
        leetcode-0297.h leetcode-1373.h leetcode-0104.h leetcode-0543.h leetcode-0144.h leetcode-0669.h
        leetcode-0124.h leetcode-0515.h leetcode-0509.h leetcode-0797.h leetcode-0023.h leetcode-0921.h
        leetcode-1541.h leetcode-0015.h leetcode-0337.h leetcode-0207.h leetcode-0210.h leetcode-0785.h
        leetcode-0886.h leetcode-0990.h leetcode-1584.h leetcode-0743.h leetcode-1514.h leetcode-1631.h
        leetcode-0227.h leetcode-0215.h leetcode-0713.h leetcode-0011.h leetcode-0017.h leetcode-0042.h
        leetcode-0496.h leetcode-0739.h leetcode-0239.h leetcode-0370.h leetcode-1011.h leetcode-0322.h
        leetcode-0931.h leetcode-0300.h leetcode-0053.h leetcode-1143.h leetcode-0583.h leetcode-0712.h
        leetcode-0072.h leetcode-0010.h leetcode-0046.h leetcode-0051.h leetcode-0698.h leetcode-0078.h
        leetcode-0077.h leetcode-0111.h leetcode-0752.h leetcode-0773.h leetcode-0416.h leetcode-0090.h
        leetcode-0040.h leetcode-0047.h leetcode-0039.h leetcode-0141.h leetcode-0142.h leetcode-0876.h
        leetcode-0019.h leetcode-0167.h leetcode-0344.h leetcode-0021.h leetcode-0160.h leetcode-0020.h
        leetcode-0018.h leetcode-0001.h leetcode-1288.h leetcode-0056.h leetcode-0986.h leetcode-0121.h
        leetcode-0122.h leetcode-0123.h leetcode-0188.h leetcode-0309.h leetcode-0714.h leetcode-0146.h
        leetcode-0460.h leetcode-0026.h leetcode-0027.h leetcode-0083.h leetcode-0283.h leetcode-0870.h
        leetcode-0200.h leetcode-1254.h leetcode-1020.h leetcode-0694.h leetcode-0695.h leetcode-1905.h
        leetcode-0198.h leetcode-0213.h leetcode-0230.h leetcode-0538.h leetcode-1038.h leetcode-0450.h
        leetcode-0700.h leetcode-0701.h leetcode-0098.h leetcode-0096.h leetcode-0095.h leetcode-0323.h
        leetcode-0130.h leetcode-0261.h leetcode-1135.h leetcode-0277.h leetcode-0064.h leetcode-0241.h
        leetcode-0253.h leetcode-1305.h leetcode-0591.h leetcode-0937.h leetcode-1823.h leetcode-0002.h
        leetcode-0004.h leetcode-0933.h leetcode-0005.h leetcode-0022.h leetcode-0433.h leetcode-0442.h
        leetcode-0942.h leetcode-0913.h leetcode-1728.h leetcode-0449.h leetcode-0944.h leetcode-0025.h
        leetcode-0234.h leetcode-0048.h leetcode-0054.h leetcode-0059.h leetcode-0528.h leetcode-0410.h
        leetcode-0380.h leetcode-0710.h leetcode-0316.h leetcode-1081.h leetcode-0912.h
        leetcode-0315.h leetcode-0493.h leetcode-0327.h leetcode-0341.h leetcode-0236.h leetcode-1644.h
        leetcode-1650.h leetcode-1676.h leetcode-0235.h leetcode-0222.h leetcode-0208.h leetcode-1804.h
        leetcode-0224.h leetcode-0772.h leetcode-0648.h leetcode-0211.h leetcode-0677.h leetcode-0295.h
        leetcode-0503.h leetcode-1104.h leetcode-1845.h leetcode-0662.h leetcode-0703.h leetcode-0225.h
        leetcode-0232.h leetcode-0355.h leetcode-0895.h leetcode-0435.h leetcode-0452.h leetcode-1024.h
        leetcode-0055.h leetcode-0045.h leetcode-0134.h leetcode-0191.h leetcode-0231.h leetcode-0136.h
        leetcode-0268.h leetcode-0312.h leetcode-0494.h leetcode-0172.h leetcode-0793.h leetcode-0204.h
        leetcode-0382.h leetcode-0398.h leetcode-0174.h leetcode-0514.h leetcode-0887.h leetcode-0787.h
        leetcode-0877.h leetcode-0651.h leetcode-0037.h leetcode-0372.h leetcode-0645.h leetcode-0292.h
        leetcode-0319.h leetcode-0008.h leetcode-0070.h leetcode-0033.h leetcode-0007.h leetcode-0871.h
        leetcode-0009.h leetcode-0014.h leetcode-0169.h leetcode-0088.h leetcode-0148.h leetcode-0155.h
        leetcode-0151.h leetcode-0120.h leetcode-0347.h leetcode-0237.h leetcode-0165.h leetcode-0082.h
        leetcode-0217.h leetcode-0093.h leetcode-0079.h leetcode-0143.h leetcode-0486.h leetcode-0103.h)
