cmake_minimum_required(VERSION 3.16)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(leetcode1-100)
include_directories(leetcode101-200)
include_directories(leetcode201-300)
include_directories(leetcode301-400)
include_directories(leetcode401-500)
include_directories(leetcode501-600)
include_directories(leetcode601-700)
include_directories(leetcode701-800)
include_directories(leetcode801-900)
include_directories(leetcode901-1000)

add_executable(leetcode
        leetcode1-100/leetcode-0001.h
        leetcode1-100/leetcode-0002.h
        leetcode1-100/leetcode-0003.h
        leetcode1-100/leetcode-0004.h
        leetcode1-100/leetcode-0005.h
        leetcode1-100/leetcode-0007.h
        leetcode1-100/leetcode-0008.h
        leetcode1-100/leetcode-0009.h
        leetcode1-100/leetcode-0010.h
        leetcode1-100/leetcode-0011.h
        leetcode1-100/leetcode-0014.h
        leetcode1-100/leetcode-0015.h
        leetcode1-100/leetcode-0017.h
        leetcode1-100/leetcode-0018.h
        leetcode1-100/leetcode-0019.h
        leetcode1-100/leetcode-0020.h
        leetcode1-100/leetcode-0021.h
        leetcode1-100/leetcode-0022.h
        leetcode1-100/leetcode-0023.h
        leetcode1-100/leetcode-0025.h
        leetcode1-100/leetcode-0026.h
        leetcode1-100/leetcode-0027.h
        leetcode1-100/leetcode-0028.h
        leetcode1-100/leetcode-0033.h
        leetcode1-100/leetcode-0034.h
        leetcode1-100/leetcode-0037.h
        leetcode1-100/leetcode-0039.h
        leetcode1-100/leetcode-0040.h
        leetcode1-100/leetcode-0042.h
        leetcode1-100/leetcode-0045.h
        leetcode1-100/leetcode-0046.h
        leetcode1-100/leetcode-0047.h
        leetcode1-100/leetcode-0048.h
        leetcode1-100/leetcode-0051.h
        leetcode1-100/leetcode-0053.h
        leetcode1-100/leetcode-0054.h
        leetcode1-100/leetcode-0055.h
        leetcode1-100/leetcode-0056.h
        leetcode1-100/leetcode-0059.h
        leetcode1-100/leetcode-0064.h
        leetcode1-100/leetcode-0070.h
        leetcode1-100/leetcode-0072.h
        leetcode1-100/leetcode-0076.h
        leetcode1-100/leetcode-0077.h
        leetcode1-100/leetcode-0078.h
        leetcode1-100/leetcode-0079.h
        leetcode1-100/leetcode-0082.h
        leetcode1-100/leetcode-0083.h
        leetcode1-100/leetcode-0088.h
        leetcode1-100/leetcode-0090.h
        leetcode1-100/leetcode-0092.h
        leetcode1-100/leetcode-0093.h
        leetcode1-100/leetcode-0095.h
        leetcode1-100/leetcode-0096.h
        leetcode1-100/leetcode-0098.h
        leetcode101-200/leetcode-0103.h
        leetcode101-200/leetcode-0104.h
        leetcode101-200/leetcode-0105.h
        leetcode101-200/leetcode-0106.h
        leetcode101-200/leetcode-0111.h
        leetcode101-200/leetcode-0114.h
        leetcode101-200/leetcode-0116.h
        leetcode101-200/leetcode-0120.h
        leetcode101-200/leetcode-0121.h
        leetcode101-200/leetcode-0122.h
        leetcode101-200/leetcode-0123.h
        leetcode101-200/leetcode-0124.h
        leetcode101-200/leetcode-0130.h
        leetcode101-200/leetcode-0134.h
        leetcode101-200/leetcode-0136.h
        leetcode101-200/leetcode-0141.h
        leetcode101-200/leetcode-0142.h
        leetcode101-200/leetcode-0143.h
        leetcode101-200/leetcode-0144.h
        leetcode101-200/leetcode-0146.h
        leetcode101-200/leetcode-0148.h
        leetcode101-200/leetcode-0151.h
        leetcode101-200/leetcode-0155.h
        leetcode101-200/leetcode-0160.h
        leetcode101-200/leetcode-0165.h
        leetcode101-200/leetcode-0167.h
        leetcode101-200/leetcode-0169.h
        leetcode101-200/leetcode-0172.h
        leetcode101-200/leetcode-0174.h
        leetcode101-200/leetcode-0188.h
        leetcode101-200/leetcode-0191.h
        leetcode101-200/leetcode-0198.h
        leetcode101-200/leetcode-0200.h
        leetcode201-300/leetcode-0204.h
        leetcode201-300/leetcode-0206.h
        leetcode201-300/leetcode-0207.h
        leetcode201-300/leetcode-0208.h
        leetcode201-300/leetcode-0210.h
        leetcode201-300/leetcode-0211.h
        leetcode201-300/leetcode-0213.h
        leetcode201-300/leetcode-0215.h
        leetcode201-300/leetcode-0217.h
        leetcode201-300/leetcode-0222.h
        leetcode201-300/leetcode-0224.h
        leetcode201-300/leetcode-0225.h
        leetcode201-300/leetcode-0226.h
        leetcode201-300/leetcode-0227.h
        leetcode201-300/leetcode-0230.h
        leetcode201-300/leetcode-0231.h
        leetcode201-300/leetcode-0232.h
        leetcode201-300/leetcode-0234.h
        leetcode201-300/leetcode-0235.h
        leetcode201-300/leetcode-0236.h
        leetcode201-300/leetcode-0237.h
        leetcode201-300/leetcode-0239.h
        leetcode201-300/leetcode-0241.h
        leetcode201-300/leetcode-0253.h
        leetcode201-300/leetcode-0261.h
        leetcode201-300/leetcode-0268.h
        leetcode201-300/leetcode-0277.h
        leetcode201-300/leetcode-0283.h
        leetcode201-300/leetcode-0292.h
        leetcode201-300/leetcode-0295.h
        leetcode201-300/leetcode-0297.h
        leetcode201-300/leetcode-0300.h
        leetcode301-400/leetcode-0303.h
        leetcode301-400/leetcode-0304.h
        leetcode301-400/leetcode-0309.h
        leetcode301-400/leetcode-0312.h
        leetcode301-400/leetcode-0315.h
        leetcode301-400/leetcode-0316.h
        leetcode301-400/leetcode-0319.h
        leetcode301-400/leetcode-0322.h
        leetcode301-400/leetcode-0323.h
        leetcode301-400/leetcode-0327.h
        leetcode301-400/leetcode-0337.h
        leetcode301-400/leetcode-0341.h
        leetcode301-400/leetcode-0344.h
        leetcode301-400/leetcode-0347.h
        leetcode301-400/leetcode-0355.h
        leetcode301-400/leetcode-0370.h
        leetcode301-400/leetcode-0372.h
        leetcode301-400/leetcode-0380.h
        leetcode301-400/leetcode-0382.h
        leetcode301-400/leetcode-0398.h
        leetcode401-500/leetcode-0410.h
        leetcode401-500/leetcode-0416.h
        leetcode401-500/leetcode-0433.h
        leetcode401-500/leetcode-0435.h
        leetcode401-500/leetcode-0438.h
        leetcode401-500/leetcode-0442.h
        leetcode401-500/leetcode-0449.h
        leetcode401-500/leetcode-0450.h
        leetcode401-500/leetcode-0452.h
        leetcode401-500/leetcode-0460.h
        leetcode401-500/leetcode-0486.h
        leetcode401-500/leetcode-0493.h
        leetcode401-500/leetcode-0494.h
        leetcode401-500/leetcode-0496.h
        leetcode501-600/leetcode-0503.h
        leetcode501-600/leetcode-0509.h
        leetcode501-600/leetcode-0514.h
        leetcode501-600/leetcode-0515.h
        leetcode501-600/leetcode-0518.h
        leetcode501-600/leetcode-0528.h
        leetcode501-600/leetcode-0538.h
        leetcode501-600/leetcode-0543.h
        leetcode501-600/leetcode-0560.h
        leetcode501-600/leetcode-0567.h
        leetcode501-600/leetcode-0583.h
        leetcode501-600/leetcode-0591.h
        leetcode601-700/leetcode-0645.h
        leetcode601-700/leetcode-0648.h
        leetcode601-700/leetcode-0651.h
        leetcode601-700/leetcode-0652.h
        leetcode601-700/leetcode-0654.h
        leetcode601-700/leetcode-0662.h
        leetcode601-700/leetcode-0669.h
        leetcode601-700/leetcode-0677.h
        leetcode601-700/leetcode-0694.h
        leetcode601-700/leetcode-0695.h
        leetcode601-700/leetcode-0698.h
        leetcode601-700/leetcode-0700.h
        leetcode701-800/leetcode-0701.h
        leetcode701-800/leetcode-0703.h
        leetcode701-800/leetcode-0704.h
        leetcode701-800/leetcode-0710.h
        leetcode701-800/leetcode-0712.h
        leetcode701-800/leetcode-0713.h
        leetcode701-800/leetcode-0714.h
        leetcode701-800/leetcode-0739.h
        leetcode701-800/leetcode-0743.h
        leetcode701-800/leetcode-0752.h
        leetcode701-800/leetcode-0772.h
        leetcode701-800/leetcode-0773.h
        leetcode701-800/leetcode-0785.h
        leetcode701-800/leetcode-0787.h
        leetcode701-800/leetcode-0793.h
        leetcode701-800/leetcode-0797.h
        leetcode801-900/leetcode-0870.h
        leetcode801-900/leetcode-0871.h
        leetcode801-900/leetcode-0875.h
        leetcode801-900/leetcode-0876.h
        leetcode801-900/leetcode-0877.h
        leetcode801-900/leetcode-0886.h
        leetcode801-900/leetcode-0887.h
        leetcode801-900/leetcode-0889.h
        leetcode801-900/leetcode-0895.h
        leetcode901-1000/leetcode-0912.h
        leetcode901-1000/leetcode-0913.h
        leetcode901-1000/leetcode-0921.h
        leetcode901-1000/leetcode-0931.h
        leetcode901-1000/leetcode-0933.h
        leetcode901-1000/leetcode-0937.h
        leetcode901-1000/leetcode-0942.h
        leetcode901-1000/leetcode-0944.h
        leetcode901-1000/leetcode-0986.h
        leetcode901-1000/leetcode-0990.h
        leetcode-1011.h
        leetcode-1020.h
        leetcode-1024.h
        leetcode-1038.h
        leetcode-1081.h
        leetcode-1094.h
        leetcode-1104.h
        leetcode-1109.h
        leetcode-1135.h
        leetcode-1143.h
        leetcode-1254.h
        leetcode-1288.h
        leetcode-1305.h
        leetcode-1373.h
        leetcode-1514.h
        leetcode-1541.h
        leetcode-1584.h
        leetcode-1631.h
        leetcode-1644.h
        leetcode-1650.h
        leetcode-1676.h
        leetcode-1728.h
        leetcode-1804.h
        leetcode-1823.h
        leetcode-1845.h
        leetcode-1905.h
        main.cpp
        utils.h leetcode801-900/leetcode-0838.h leetcode601-700/leetcode-0679.h 其它/LCP09.h leetcode401-500/leetcode-0478.h leetcode-1004.h leetcode-1201.h leetcode401-500/leetcode-0423.h leetcode401-500/leetcode-0440.h 其它/jianzhi40.h leetcode-1262.h leetcode301-400/leetcode-0333.h leetcode801-900/leetcode-0803.h leetcode-1043.h leetcode301-400/leetcode-0386.h leetcode201-300/leetcode-0214.h leetcode101-200/leetcode-0135.h 其它/jianzhi62.h leetcode401-500/leetcode-0453.h leetcode-1047.h leetcode401-500/leetcode-0403.h 其它/mianshi1724.h leetcode601-700/leetcode-0611.h leetcode401-500/leetcode-0462.h leetcode1-100/leetcode-0065.h leetcode701-800/leetcode-0796.h leetcode1-100/leetcode-0062.h leetcode301-400/leetcode-0349.h leetcode1-100/leetcode-0063.h leetcode401-500/leetcode-0473.h leetcode-1091.h leetcode601-700/leetcode-0622.h leetcode901-1000/leetcode-0980.h leetcode301-400/leetcode-0365.h leetcode401-500/leetcode-0459.h)
